--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@auth/core": "^0.17.0",
+    "@hebilicious/authjs-nuxt": "^0.3.5",
     "@prisma/client": "^5.11.0",
     "nuxt": "^3.11.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "prisma": "^5.11.0",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "eslint": "^8.52.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
@@ -24,6 +26,6 @@
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.18.1",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0"
+    "prisma": "^5.11.0"
   }
 }
